# estdlib

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  conanfile.py  idf_component.yml  library.json
examples/rpi-pico/ostream/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  platform.h  sources.cmake
src/embr/: README.md  observer.h
src/estd/: algorithm.h  array.h  bit.h  cctype.h  charconv.h  chrono.h  cstddef.h  cstdint.h  cstdlib.h  deque.h  expected.h  flags.h  forward_list.h  functional.h  initializer_list.h  iomanip.h  ios.h  iosfwd.h  iostream.h  istream.h  iterator.h  limits.h  list.h  locale.h  map.h  memory.h  mutex.h  new.h  numeric.h  optional.h  ostream.h  queue.h  ratio.h  semaphore.h  span.h  sstream.h  stack.h  streambuf.h  string.h  string_view.h  (+11 more)
src/estd/allocators/: fixed.h  generic.h  handle_desc.h  tags.h
src/estd/c++03/: ostream.h  tuple.h
src/estd/exp/: README.md  array.h  base.h  buffer.h  functional.h  heap.h  memory_pool.h  memory_pool2.h  memory_resource.h  observer.h  pgm_string.h  streambuf-traits.h  tmr.h  tuple.h  unique_handle.h  unused-forward_list.h  unused-memory.h
src/estd/exp/memory/: memory_pool.h  memory_pool2.h
src/estd/exp/pgm/: accessor.h  allocator.h  array.h  fwd.h  impl.h  policy.h  read.h  string.h  string2.h
src/estd/ext/: README.md
src/estd/internal/: accessor.h  array.h  buffer.h  cctype.h  charconv.h  charconv.hpp  chooser.h  chrono.h  common_type.h  constructible.h  cstdlib.h  deduce_fixed_size.h  dynamic_array.h  enum.h  expected.h  fpos.h  functional.h  handle_with_offset.h  heap.h  invoke.h  invoke_result.h  iomanip.h  ios.h  ios_base.h  ios_policy.h  iosfwd.h  iostream.h  is_assignable.h  is_base_of.h  is_convertible.h  is_empty.h  is_function.h  istream.h  istream_iterator.h  istream_runtimearray.hpp  istreambuf_iterator.h  iterator_standalone.h  limits.h  linked_ref.h  list_node.h  (+29 more)
src/estd/internal/algorithm/: heap.h  raw.h
src/estd/internal/alias/: cstdint.h  string.h  type_traits.h
src/estd/internal/bip/: buffer.h
src/estd/internal/charconv/: base_provider.h  from_chars.hpp  result.h  reverse.hpp  string.h  to_chars.hpp
src/estd/internal/chrono/: duration.h  duration.hpp  features.h  formatter.hpp  literals.h  math.h  operators.hpp  ratio.h  time_point.h  units.hpp
src/estd/internal/container/: ends_with.h  fwd.h  handle_with_offset.h  iterator.h  locking_accessor.h  set.h  specializer.h  starts_with.h  traditional_accessor.h  unordered_map.h  unordered_set.h
src/estd/internal/feature/: algorithm.h  bit.h  cpp.h  dynamic_array.h  estd.h  exception.h  functional.h  ios.h  num_get.h  optional.h  std.h  streambuf.h  string.h  toolchain.h  tuple.h  type_traits.h  variant.h
src/estd/internal/functional/: function_traits.h  hash.h
src/estd/internal/fwd/: README.md  array.h  c++03-tuple.h  chrono.h  common_type.h  dynamic_array.h  expected.h  flags.h  functional.h  limits.h  memory.h  optional.h  ostream.h  ratio.h  streambuf.h  string.h  string_view.h  tuple-shared.h  tuple.h  type_traits.h  utility.h  variant.h
src/estd/internal/impl/: README.md  allocated_array.h  dynamic_array.h  functional.h  handle_desc.h  streambuf.h
src/estd/internal/iterator/: back_insert.h
src/estd/internal/layer1/: string.h
src/estd/internal/layer2/: string.h
src/estd/internal/layer3/: string.h
src/estd/internal/legacy/: array.h  utility.h
src/estd/internal/limits/: integer.h  macros.h  traits.h
src/estd/internal/list/: base.h  fwd.h  intrusive.h  intrusive_forward.h  iterator.h  traits.h
src/estd/internal/llvm/: README.md  is_void.h
src/estd/internal/locale/: cbase.h  ctype.h  facet.h  fwd.h  iso.h  money.h  moneypunct.h  num_get.h  num_put.h  numpunct.h  utility.h
src/estd/internal/macro/: README.md  c++11_emul.h  cpp.h  pop.h  push.h
src/estd/internal/memory/: pool.h
src/estd/internal/ostream/: integer.h
src/estd/internal/raw/: README.md  cstddef.h  expected.h  (+5 more)
src/estd/iterators/: list.h
src/estd/obsolete/: array.h  functional.h
src/estd/policy/: base.h  list.h  rfc.h  string.h
src/estd/port/: chrono.h  chrono.hpp  identify_platform.h  iostream.h  is_empty.h  istream.h  mutex.h  ostream.h  posix.h  semaphore.h  streambuf.h  string.h  support_platform.h  thread.h  toolchain.h  type_traits.h  version.h
src/estd/traits/: allocator_traits.cpp  allocator_traits.h  char_traits.h  fwd.h  list_node.h  node_list.h  string.h
test/c++03/simple-tests/: CMakeLists.txt  README.md  chrono-test.cpp  main.cpp  misc.cpp  tuple-test.cpp
test/catch/: .gitignore  CMakeLists.txt  SetUpConfigurations.cmake  algorithm-test.cpp  allocator-test.cpp  array-test.cpp  bit-test.cpp  buffer-test.cpp  c++03-test.cpp  charconv-test.cpp  chrono-test.cpp  cstddef-test.cpp  dynamic-array-test.cpp  expected-test.cpp  experimental-test.cpp  flags-test.cpp  functional-test.cpp  hash-test.cpp  internal-test.cpp  ios-test.cpp  iostream-test.cpp  istream-test.cpp  iterator-test.cpp  limits-test.cpp  list-test.cpp  locale-test.cpp  macros-test.cpp  main.cpp  map-test.cpp  mem.h  memory-pool-test.cpp  memory-test.cpp  misc-test.cpp  numeric-test.cpp  observer-test.cpp  optional-test.cpp  ostream-test.cpp  port-test.cpp  priority-queue-test.cpp  queue-test.cpp  (+17 more)
test/catch/experimental/: memory-pool1-test.cpp  memory-pool2-test.cpp  memory-pool3-test.cpp
test/catch/macro/: push.h
test/catch/obsolete/: allocator-test.cpp
test/catch/resources/: README.md  blob1  resources.cmake
test/catch/test/: nontrivial.h  retry.h
test/rpi-pico/: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.cpp  proving.cpp  rtos.cpp
test/unity/: CMakeLists.txt  align.cpp  array.cpp  avr.cpp  bipbuf.cpp  bit.cpp  chrono.cpp  cpp.cpp  cstddef.cpp  expected.cpp  freertos.cpp  functional.cpp  hash.cpp  housekeeping.cpp  limits.cpp  locale.cpp  map.cpp  optional.cpp  ostream.cpp  queue.cpp  ratio.cpp  span.cpp  streambuf.cpp  string.cpp  test-data.h  thread.cpp  tuple.cpp  type_traits.cpp  unit-test.h  unordered.cpp  variadic.cpp  variant.cpp
test/unity/non-esp-idf/: fake-esp-idf.h
(+321 files in other folders)
